--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.0.3",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
