--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "react-pdf": "^7.0.3",
     "react-toastify": "^9.1.3"
   },
+  "engines": {
+    "node": "24.x"
+  },
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
